--- a/src/main/resources/com/example/bomberman/game-view.fxml
+++ b/src/main/resources/com/example/bomberman/game-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
-<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bomberman.HelloController">
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bomberman.MainController">
   <children>
     <HBox alignment="CENTER" spacing="20.0" styleClass="header">
       <children>
