--- a/src/main/resources/com/example/bomberman/view/profiles-view.fxml
+++ b/src/main/resources/com/example/bomberman/view/profiles-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.bomberman.ProfilesController"
+            fx:controller="com.example.bomberman.controller.ProfilesController"
             styleClass="profiles-view">
 
     <!-- En-tête -->
